// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppState with a slice 1`] = `
AppState {
  "config": AppStateConfig {
    "fields": [
      FieldDesc {
        "apply": undefined,
        "init": [Function],
        "name": "slice$",
      },
    ],
    "opts": undefined,
    "slices": [
      Slice {
        "key": "slice$",
        "spec": {
          "state": {
            "init": [Function],
          },
        },
      },
    ],
    "slicesByKey": {
      "slice$": Slice {
        "key": "slice$",
        "spec": {
          "state": {
            "init": [Function],
          },
        },
      },
    },
  },
  "slicesCurrentState": {
    "slice$": null,
  },
}
`;

exports[`AppState with multiple slices 1`] = `
AppState {
  "config": AppStateConfig {
    "fields": [
      FieldDesc {
        "apply": undefined,
        "init": [Function],
        "name": "one$5",
      },
      FieldDesc {
        "apply": undefined,
        "init": [Function],
        "name": "two$",
      },
    ],
    "opts": undefined,
    "slices": [
      Slice {
        "key": "one$5",
        "spec": {
          "key": SliceKey {
            "key": "one$5",
            "name": "one",
          },
          "state": {
            "init": [Function],
          },
        },
      },
      Slice {
        "key": "two$",
        "spec": {
          "key": SliceKey {
            "key": "two$",
            "name": "two",
          },
          "state": {
            "init": [Function],
          },
        },
      },
    ],
    "slicesByKey": {
      "one$5": Slice {
        "key": "one$5",
        "spec": {
          "key": SliceKey {
            "key": "one$5",
            "name": "one",
          },
          "state": {
            "init": [Function],
          },
        },
      },
      "two$": Slice {
        "key": "two$",
        "spec": {
          "key": SliceKey {
            "key": "two$",
            "name": "two",
          },
          "state": {
            "init": [Function],
          },
        },
      },
    },
  },
  "slicesCurrentState": {
    "one$5": 1,
    "two$": 2,
  },
}
`;
